flashgot.version updated Ipcheck: now tries 2 time the balanced one before using fallback, added more ipcheck sites
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@7562 ebf7c1c2-ba36-0410-9fe8-c592906822b4